<resources>
    <string name="app_name">AndroidTea</string>
    <string name="accessibility_service_label">AndroidTea 辅助功能</string>
    <string name="accessibility_service_description">用于帮助用户开启权限等</string>
    <string name="accessibility_auto_click">自动点击按钮</string>
    <string name="accessibility_auto_click_toast">辅助功能点击</string>
    <string name="notification_content_title">This is a content title</string>
    <string name="notification_content_text">This is a content text</string>
    <string name="play_music">播放</string>
    <string name="app_loading">Loading</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_discover_cancel">Cancel</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_options">Options</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="task_db">Downloading and installing %s database …</string>
    <string name="task_services">Creating Services database …\nThis may take a while …</string>
    <string name="package_missing">%s must be installed from the market !</string>
    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi state unknown</string>
    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
    <string name="discover_start">Discovery started …</string>
    <string name="discover_finished">Discovery finished !</string>
    <string name="discover_canceled">Discovery canceled !</string>
    <string name="discover_proxy_title">Proxy Error</string>
    <string name="discover_proxy_msg">Discovery is canceled, because a mac address appeared multiple times, you probably are behind a proxy.\n\nGo to your Gateway from the browser : http://%s</string>
    <string name="discover_root_title">Installation: Root</string>
    <string name="discover_root_install">Do you want to install the scan daemon for root ?</string>
    <string name="discover_root_restart">Restarting application …</string>
    <string name="discover_empty">Press Discover to start</string>
    <string name="discover_action_title">Choose an action</string>
    <string name="discover_action_scan">Scan ports</string>
    <string name="discover_action_rename">Change name</string>
    <string name="discover_action_saved">Name saved!</string>
    <string name="discover_action_deleted">Name deleted!</string>
    <string name="discover_myphone_name">MyPhone</string>
    <string name="scan_single_title">Scan IP</string>
    <string name="scan_single_summary">Enter an IP address or FQDN to scan, i.e. scanme.nmap.org</string>
    <string name="scan_noport">No open port found !</string>
    <string name="scan_noaction">No associated action !</string>
    <string name="scan_connect">Connect</string>
    <string name="scan_start">Scan started …</string>
    <string name="scan_finished">Scan finished !</string>
    <string name="scan_canceled">Scan canceled !</string>
    <string name="scan_open">Open (%s)</string>
    <string name="scan_closed">Closed (%s)</string>
    <string name="scan_host_unreachable">Host unreachable !</string>
    <string name="scan_banner_title">Port %s/tcp</string>
    <string name="info_time">Response time:</string>
    <string name="info_mac">MAC Address:</string>
    <string name="info_nic">NIC vendor:</string>
    <string name="info_ports_open">Open ports:</string>
    <string name="info_ports_closed">Closed ports:</string>
    <string name="info_unknown">Unknown</string>
    <string name="export_finished">File saved !</string>
    <string name="export_choose">Choose file destination</string>
    <string name="export_save">Save</string>
    <string name="export_exists_title">File already exists</string>
    <string name="export_exists_msg">Do you want to overwrite ?</string>
    <string name="help_discovery_title">Hosts discovery</string>
    <string name="help_discovery_content">The method that is being used, does not need to have root privileges. In future release there will be more advanced techniques, once the non-root ones are polished.\n\nHere is how it works: \n1. Calculate the subnetwork range\n2. Iterate through IP and query them\n3. First it sends an ICMP ping or Echo on tcp/7 (with InetAddress.isReachable())\n4. If it does not work, it tries to connect() on well known open tcp ports such as: 135, 139, 22, 111, 80\n5. If none of the above is successful, the host is not discovered</string>
    <string name="help_portscan_title">Port scan</string>
    <string name="help_portscan_content">Port scan is event driven, using Java\'s Selector and SocketChannel.\nThere is a fake timeout by registrering the time in ms at socket\'s creation and checking regularly this value.\nThe port scan method, as discovery, uses full tcp connection check. (will be more granular in the future with root features.)\n\nA maximum of 127 Sockets are opened at a time, so this is not always accurate, but quite fast. Again, a new feature is coming that will adapt times between requests according to host response time (kind of software network congestion control)\n\nA port is considered open when tcp connect() is fully successful, closed when no service is listening on the other end, or filtered when the timeout is reached.</string>
    <string name="help_links_title">Links</string>
    <string name="help_links_content">- TCP connect scan: http://nmap.org/book/man-port-scanning-techniques.html#id421401\n\n- Host discovery: http://nmap.org/book/man-host-discovery.html</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_export">Export</string>
    <string name="preferences_credits">Credits</string>
    <string name="preferences_discover">Discovery</string>
    <string name="preferences_portscan">Port Scan</string>
    <string name="preferences_advanced">General</string>
    <string name="preferences_resolve_name_title">Resolve Hostname</string>
    <string name="preferences_resolve_name_summary">Use system DNS to resolve ip addresses</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Vibrate when Scan is completed</string>
    <string name="preferences_ratecontrol_enable_title">Rate control</string>
    <string name="preferences_ratecontrol_enable_summary">Enable automatic rate detection</string>
    <string name="preferences_timeout_discover_title">Custom rate</string>
    <string name="preferences_timeout_discover_summary">Rate of discovery in millisecondes</string>
    <string name="preferences_port_start_title">First Port</string>
    <string name="preferences_port_start_summary">First TCP Port to scan. 1–65535</string>
    <string name="preferences_port_end_title">Last Port</string>
    <string name="preferences_port_end_summary">Last TCP Port to scan. 1–65535</string>
    <string name="preferences_banner_title">Services banners</string>
    <string name="preferences_banner_summary">Read banner from a connected socket (ex.: SSH-2.0-OpenSSH_5.1p1)</string>
    <string name="preferences_timeout_force_title">Custom timeout</string>
    <string name="preferences_timeout_force_summary">Manually set connect timeout</string>
    <string name="preferences_timeout_title">Connect timeout</string>
    <string name="preferences_timeout_summary">Timeout of a port connection in millisecondes</string>
    <string name="preferences_allow_mobile_title">Allow mobile discovery</string>
    <string name="preferences_allow_mobile_summary">Scan over edge/3g/… usually leading to strange results, if any</string>
    <string name="preferences_ssh_user_title">SSH User</string>
    <string name="preferences_ssh_user_summary">Username for the SSH connection</string>
    <string name="preferences_threads_title">Threads pool</string>
    <string name="preferences_threads_summary">Maximum number of threads to use in host discovery (1–256)</string>
    <string name="preferences_resetdb_title">Update NIC Database</string>
    <string name="preferences_resetdb_summary">Pull and update MAC addresses database</string>
    <string name="preferences_resetdb_action">Do you want to download %1$s ? (~%2$dk)</string>
    <string name="preferences_resetdb_ok">Database updated ! %s new entries …</string>
    <string name="preferences_version_title">Version</string>
    <string name="preferences_website_title">Website</string>
    <string name="preferences_email_title">Contact</string>
    <string name="preferences_intf_title">Network interface</string>
    <string name="preferences_intf_summary">Choose which interface to use</string>
    <string name="preferences_discover_method_title">Discover Method</string>
    <string name="preferences_discover_method_summary">Change to different method of host discovery</string>
    <string name="preferences_discover_method_title_dialog">Choose a method</string>
    <string name="preferences_ip_start_title">IP start</string>
    <string name="preferences_ip_start_summary">First IP address to scan</string>
    <string name="preferences_ip_end_title">IP end</string>
    <string name="preferences_ip_end_summary">Last IP address to scan</string>
    <string name="preferences_ip_custom_title">Custom IP range</string>
    <string name="preferences_ip_custom_summary">Manually set start/end IPs</string>
    <string name="preferences_cidr_custom_title">Custom CIDR</string>
    <string name="preferences_cidr_custom_summary">Manually set CIDR (defines subnet)</string>
    <string name="preferences_cidr">Change CIDR</string>
    <string name="preferences_error1">Error: First is bigger than Last !</string>
    <string name="preferences_error2">Error: Number of Threads must be between 1 and 256 !</string>
    <string name="call_phone">拨打电话</string>
    <string name="network_websocket_connect">建立连接</string>
    <string name="network_websocket_send">发送消息</string>
    <string name="network_websocket_login">登录</string>
    <string name="network_websocket_clear_log">清除日志</string>
    <string name="home_launch_browser_btn_txt">打开浏览器</string>
    <string name="home_launch_webview_btn_txt">打开Webview</string>
    <string name="home_launch_launchmode_btn_txt">打开LaunchMode页面</string>
    <string name="launch_mode_title">LaunchMode分类</string>
    <string name="launch_mode_standard_btn_txt">Standard模式</string>
    <string name="launch_mode_single_top_btn_text">SingleTop模式</string>
    <string name="launch_mode_single_task_btn_text">SingleTask模式</string>
    <string name="launch_mode_single_instance_btn_txt">SingleInstance模式</string>
    <string name="single_top_launch_btn_txt">启动SingleTopActivity</string>
    <string name="other_launch_single_task_btn_txt">启动SingleTaskActivity</string>
    <string name="other_launch_single_instance_btn_txt">启动SingleInstanceActivity</string>
    <string name="home_launch_other_app">跳转其他应用</string>
    <string name="home_launch_immersive_page">沉浸式页面</string>
</resources>