<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liubz.androidtea.HomeActivity">

    <Button
        android:id="@+id/call_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_phone" />

    <Button
        android:id="@+id/launch_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_launch_webview_btn_txt"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/launch_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_launch_browser_btn_txt" />

    <Button
        android:id="@+id/launch_launch_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_launch_launchmode_btn_txt"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/go_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_launch_other_app" />


    <Button
        android:id="@+id/launch_mode_transparent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="打开透明页面"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/service_loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ServiceLoader"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/classloader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ClassLoader"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/immersive_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_launch_immersive_page"
        android:textAllCaps="false" />
</LinearLayout>
