<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".network.websocket.WebSocketActivity">

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="connect"
            android:text="@string/network_websocket_connect" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/network_websocket_login" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="send"
            android:text="@string/network_websocket_send" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_websocket_clear_log"
            android:onClick="clear"/>

    <TextView
            android:id="@+id/show_log_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>
