<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/other_single_top_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_top_launch_btn_txt"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/other_single_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_launch_single_task_btn_txt"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/other_single_instance_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_launch_single_instance_btn_txt"
        android:textAllCaps="false" />
</LinearLayout>